--- a/apps/shared-components/badge/badge.component.scss
+++ b/apps/shared-components/badge/badge.component.scss
@@ -16,6 +16,14 @@ div {
         font-size: 16px;
       }
     }
+
+    &.mini-text {
+      @apply com-py-2px com-px-1 com-leading-3 com-text-8px com-font-medium;
+
+      nb-icon {
+        @apply com-text-sm;
+      }
+    }
   }
 
   &.rectangle {
